# observ-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
observ/: __init__.py
watchtower/: __init__.py
watchtower/providers/: __init__.py  anthropic.py  base.py  gemini.py  mistral.py  openai.py  openrouter.py  xai.py
